[CHG]默认生成的是预览版

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,6 +98,7 @@ jobs:
             assets/*/*/*.zip
             repos/agent/bin/*.zip
           generateReleaseNotes: false
+          prerelease: true
           
   release-docker:
     runs-on: ubuntu-latest
