[CHG]永久机显示为FREE

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,7 +97,7 @@ jobs:
           artifacts: |
             assets/*/*/*.zip
             repos/agent/bin/*.zip
-          generateReleaseNotes: false
+          generateReleaseNotes: true
           prerelease: true
           
   release-docker:
