[CHG]agent有下一次修改之前不再打包agent

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,7 +96,7 @@ jobs:
         with:
           artifacts: |
             assets/*/*/*.zip
-            repos/agent/bin/*.zip
+          # repos/agent/bin/*.zip
           generateReleaseNotes: true
           prerelease: true
           
